api/kubernetes/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: nyc-tickets-api
  labels:
    name: api-svc
spec:
  type: NodePort
  ports:
  - name: api-main
    protocol: TCP
    port: 3000   
    nodePort: 31013
  selector:
    status: api-active
