api/kubernetes/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: nyc-tickets-api
  labels:
    name: dashboard-svc
spec:
  type: NodePort
  ports:
  - name: dashboard-main
    protocol: TCP
    port: 9090   
    nodePort: 31012
  selector:
    status: dashboard-active
