api/kubernetes/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: nyc-tickets-api
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nyc-api.munisso.com
    http:
      paths:
      - backend:
          serviceName: api-svc
          servicePort: api-main
